--- a/team/css/main.css
+++ b/team/css/main.css
@@ -1,11 +1,18 @@
 /* ==== header ==== */
 /* ================= */
 
+#gnb_static.on{
+  position:sticky;
+  left:0;top:0;
+  z-index: 110;
+  background:rgba(255, 255, 255,0.7)
+}
 header {
   width: 100%;
   border-top: 5px solid #f5d594;
   height: 145px;
 }
+
 .header_inner {
   width: 1280px;
   margin: 0 auto;
@@ -43,6 +50,7 @@ header {
 }
 
 /* ==== gnb ==== */
+
 .menuBox {
   width: 100%;
   height: 50px;
