--- a/day28/css/style.css
+++ b/day28/css/style.css
@@ -10,3 +10,15 @@
 #btnDeal {
   border: 2px solid #000;
 }
+
+#imgResult {
+  position:absolute;
+  width: 500px;
+  height: 250px;
+  left:200px;
+  top:100px;
+  display: none;
+}
+
+.red{color:red;}
+.blue{ color:blue;}
