--- a/project/team/css/mobile.css
+++ b/project/team/css/mobile.css
@@ -86,21 +86,21 @@
 
   div.share ul li {
     width: 100%;
-    position:relative;
+    position: relative;
   }
-  
-  div.share ul li::before{
-    content: '';
+
+  div.share ul li::before {
+    content: "";
     display: block;
     width: 1px;
     height: 40px;
-    position:absolute;
-    left:0;
-    top:50%;
-    background:#ccc;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    background: #ccc;
     transform: translateY(-50%);
   }
-  div.share ul li:first-child:before{
+  div.share ul li:first-child:before {
     display: none;
   }
   div.share ul li a {
@@ -115,38 +115,37 @@
     width: 100%;
     height: auto;
   }
-  footer .footerBox1{
+  footer .footerBox1 {
     width: 100%;
-    padding:10px 0;
+    padding: 10px 0;
   }
-  .footer_menu{
-    margin:0;
-
+  .footer_menu {
+    margin: 0;
   }
-  footer .footerBox1 ul{
+  footer .footerBox1 ul {
     display: flex;
     justify-content: space-around;
   }
-  footer#footer div{
+  footer#footer div {
     width: 100%;
   }
 
   div.share ul li a.twitter,
   div.share ul li a.facebook,
-  div.share ul li a.instagram{
+  div.share ul li a.instagram {
     display: block;
     height: 70px;
     padding: 0;
-    font-size:16px;
+    font-size: 16px;
   }
 
   footer#footer p.txt1 {
     display: block;
     font-size: 12px;
-    margin-left:10px;
+    margin-left: 10px;
   }
-  footer#footer p.logo{
-    font-size:40px;
+  footer#footer p.logo {
+    font-size: 40px;
   }
   #header {
     position: sticky;
@@ -154,9 +153,10 @@
     left: 0;
     top: 0;
   }
-  .header_box{
+  .header_box {
     width: 100%;
   }
+
   .header_box h1 {
     width: 100%;
     position: absolute;
@@ -164,8 +164,8 @@
     transform: translateX(-50%);
     z-index: 150;
     line-height: 100px;
-    background: floralwhite;
     border-bottom: 1px solid #ccc;
+    background:#fff;
   }
   .header_nav,
   .util {
@@ -311,7 +311,7 @@
     right: 0;
     top: 0;
     transition: 0.7s ease;
-    border-top:5px solid #009223
+    border-top: 5px solid #009223;
   }
 
   .mobileMenu nav > ul > li {
@@ -353,52 +353,59 @@
     background: rgb(207, 156, 89);
     color: #fff;
   }
-  section.news{
-    padding-top:20px;
-  }
-  section.news #newswrap{
-    width: 100%;
-    
-  }
-  div.share{
-    width: 100%;
-  }
-  .news #newswrap .eventBox1 .event1{
+  #mainimg {
     display: none;
   }
-  .news #newswrap .eventBox1 .event2{
-    width: 90%;
-    margin:0 auto;
+  #Mobilemainimg {
+    display: block;
   }
-  .news #newswrap .newsBox .notice{
-    width: 90%;
-    margin:0 auto;
+
+  section.news {
+    padding-top: 20px;
   }
-  .news #newswrap .newsBox .notice2{
+  section.news #newswrap {
+    width: 100%;
+  }
+  div.share {
+    width: 100%;
+  }
+  .news #newswrap .eventBox1 .event1 {
     display: none;
   }
-  .news #newswrap .newsBox .notice .noticeHd{
+  .news #newswrap .eventBox1 .event2 {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .news #newswrap .newsBox .notice {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .news #newswrap .newsBox .notice2 {
+    display: none;
+  }
+  .news #newswrap .newsBox .notice .noticeHd {
     width: 100%;
-    left:0px;top:0px;
+    left: 0px;
+    top: 0px;
     transform: translateY(0);
-    padding:20px 30px;
+    padding: 20px 30px;
     box-sizing: border-box;
   }
-  .news #newswrap .newsBox .notice .noticeHd h2{
+  .news #newswrap .newsBox .notice .noticeHd h2 {
     display: block;
-    float:left;
+    float: left;
   }
-  .news #newswrap .newsBox .notice .noticeHd p{
+  .news #newswrap .newsBox .notice .noticeHd p {
     display: block;
-    float:right;
+    float: right;
     line-height: 20px;
-    margin-top:20px;
+    margin-top: 20px;
   }
-  .news #newswrap .newsBox .notice .noticeTx{
+  .news #newswrap .newsBox .notice .noticeTx {
     width: 100%;
-    padding:20px 30px;
+    padding: 20px 30px;
     box-sizing: border-box;
-    bottom:20px;
+    bottom: 20px;
   }
   .sub_footer {
     width: 100%;
