--- a/project/team/sub/css/sub.css
+++ b/project/team/sub/css/sub.css
@@ -338,10 +338,10 @@
     text-indent: -999px;
   }
 
-  .header_wrap {
+  /* .header_wrap {
     border-top: 5px solid #009223;
     position: absolute;
-  }
+  } */
 
   .icon_wrap {
     display: none;
@@ -365,8 +365,8 @@
 
   
   .content__back {
-    width: 100%;
-    height: 200px;
+    max-width: 100%;
+    height: 240px;
     background-repeat: no-repeat;
     background-image: url(../images/main5.jpg);
     background-size: 100% auto;
