--- a/project/team/css/tablet_style.css
+++ b/project/team/css/tablet_style.css
@@ -24,7 +24,7 @@
   /*로그인,회원가입*/
   ul.util {
     border: 0px solid black;
-    bottom: 10px;
+    right:20px;
   }
   ul.util:after {
     content: "";
@@ -117,11 +117,11 @@
 
   /*인기상품이미지*/
   div.popular {
-    margin-top: 10px;
     padding: 20px 0;
   }
   div.popularBox {
     width: 100%;
+    padding:0;
   }
   div.popular h2 {
     margin-left: 75px;
@@ -129,6 +129,7 @@
   }
   div.popular ul {
     width: 100%;
+    display: block;
   }
   div.popular ul:after {
     content: "";
@@ -139,6 +140,7 @@
     border: 0px solid black;
     position: relative;
     margin: 0;
+    float:left;
   }
   div.popular ul li {
     width: 50%;
@@ -165,10 +167,10 @@
   }
   /*신규상품이미지*/
   div.newmenu {
-    margin-top: 10px;
     padding: 20px 0;
   }
   div.newmenuBox {
+    padding:0;
     width: 100%;
   }
   div.newmenu h2 {
@@ -182,10 +184,12 @@
   }
   div.newmenu ul {
     width: 100%;
+    display: block;
   }
   div.newmenu ul li {
     border: 0px solid black;
     position: relative;
+    float:left;
     margin: 0;
   }
   div.newmenu ul li {
@@ -211,9 +215,9 @@
 
   /*케이크상품이미지*/
   div.cake {
-    margin-top: 10px;
   }
   div.cakeBox {
+    padding:0;
     width: 100%;
   }
   div.cake h2 {
@@ -227,6 +231,7 @@
   }
   div.cake ul {
     width: 100%;
+    display: block;
   }
   div.cake ul li {
     border: 0px solid black;
@@ -277,27 +282,24 @@ section.news {
   }
   .news #newswrap .newsBox {
     width: 100%;
+    padding:0;
   }
   .news #newswrap .newsBox .notice {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
+    margin-top:20px;
   }
   .news #newswrap .newsBox .notice .noticeHd {
-    width: 30%;
-    display: block;
-    left: 10%;
+    
   }
   .news #newswrap .newsBox .notice .noticeTx {
-    left: 50%;
-    width: 300px;
+    
   }
   .news #newswrap .newsBox .notice2 {
     display: none;
   }
   
-  .news #newswrap div {
-    width: 400px;
-  }
+
   .news #newswrap div a {
     display: block;
   }
