--- a/project/team/css/mobile.css
+++ b/project/team/css/mobile.css
@@ -121,7 +121,6 @@
   }
   .footer_menu {
     margin: 0;
-    font-size:12px;
   }
   footer .footerBox1 ul {
     display: flex;
@@ -131,7 +130,20 @@
     width: 100%;
   }
 
+  div.share ul li a.twitter,
+  div.share ul li a.facebook,
+  div.share ul li a.instagram {
+    display: block;
+    height: 70px;
+    padding: 0;
+    font-size: 16px;
+  }
 
+  footer#footer p.txt1 {
+    display: block;
+    font-size: 12px;
+    margin-left: 10px;
+  }
   footer#footer p.logo {
     font-size: 40px;
   }
@@ -357,6 +369,9 @@
   div.share {
     width: 100%;
   }
+  .news #newswrap .eventBox1{
+    padding:0;
+  }
   .news #newswrap .eventBox1 .event1 {
     display: none;
   }
@@ -364,41 +379,32 @@
     width: 90%;
     margin: 0 auto;
   }
+  .news #newswrap .newsBox{
+    padding:0;
+  }
   .news #newswrap .newsBox .notice {
     width: 90%;
     margin: 0 auto;
-    padding:20px;
-    box-sizing: border-box;
+    margin-top:20px;
   }
   .news #newswrap .newsBox .notice2 {
     display: none;
   }
   .news #newswrap .newsBox .notice .noticeHd {
-    width: 100%;
-    left: 10px;
-    top: 0px;
-    transform: translateY(0);
-    box-sizing: border-box;
+    
   }
   .news #newswrap .newsBox .notice .noticeHd h2 {
     display: block;
     float: left;
-    font-size:7.5vw;
- 
   }
   .news #newswrap .newsBox .notice .noticeHd p {
     display: block;
     float: right;
     line-height: 20px;
     margin-top: 20px;
-    margin-right:30px;
-    font-size:3vw;
   }
   .news #newswrap .newsBox .notice .noticeTx {
-    width: 100%;
-    padding: 20px 30px;
-    box-sizing: border-box;
-    bottom: 20px;
+    
   }
   .sub_footer {
     width: 100%;
