--- a/project/team/css/mobile.css
+++ b/project/team/css/mobile.css
@@ -68,8 +68,11 @@
     transform: scale(1.1);
   }
   section.news {
+    padding: 20px;
     width: 100%;
+    box-sizing: border-box;
   }
+
   .news div img.event1 {
     width: 100%;
   }
@@ -121,6 +124,7 @@
   }
   .footer_menu {
     margin: 0;
+    font-size:12px;
   }
   footer .footerBox1 ul {
     display: flex;
@@ -130,20 +134,7 @@
     width: 100%;
   }
 
-  div.share ul li a.twitter,
-  div.share ul li a.facebook,
-  div.share ul li a.instagram {
-    display: block;
-    height: 70px;
-    padding: 0;
-    font-size: 16px;
-  }
 
-  footer#footer p.txt1 {
-    display: block;
-    font-size: 12px;
-    margin-left: 10px;
-  }
   footer#footer p.logo {
     font-size: 40px;
   }
@@ -360,51 +351,56 @@
     display: block;
   }
 
-  section.news {
-    padding-top: 20px;
-  }
+
   section.news #newswrap {
     width: 100%;
   }
   div.share {
     width: 100%;
   }
-  .news #newswrap .eventBox1{
-    padding:0;
-  }
   .news #newswrap .eventBox1 .event1 {
     display: none;
   }
   .news #newswrap .eventBox1 .event2 {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
-  }
-  .news #newswrap .newsBox{
-    padding:0;
   }
   .news #newswrap .newsBox .notice {
-    width: 90%;
+    position:relative;
     margin: 0 auto;
-    margin-top:20px;
+    padding:20px;
+    box-sizing: border-box;
   }
   .news #newswrap .newsBox .notice2 {
     display: none;
   }
   .news #newswrap .newsBox .notice .noticeHd {
-    
+    width: 100%;
+    height: 20%;
+    left: 10px;
+    top: 0px;
+    box-sizing: border-box;
+    transform: translateY(0);
+    padding-top:20px;
   }
   .news #newswrap .newsBox .notice .noticeHd h2 {
     display: block;
     float: left;
+    font-size:7.5vw;
   }
   .news #newswrap .newsBox .notice .noticeHd p {
     display: block;
     float: right;
     line-height: 20px;
     margin-top: 20px;
+    margin-right:30px;
+    font-size:3vw;
   }
   .news #newswrap .newsBox .notice .noticeTx {
-    
+    width: 100%;
+    padding: 20px 30px;
+    box-sizing: border-box;
+    bottom: 20px;
   }
   .sub_footer {
     width: 100%;
