--- a/team/css/tablet_style.css
+++ b/team/css/tablet_style.css
@@ -55,7 +55,9 @@
     z-index: 100;
     justify-content: space-around;
   }
-
+  nav>ul>.na>a{
+    line-height: 50px;
+  }
   nav > ul > li {
     left: 0px;
     position: relative;
@@ -87,7 +89,9 @@
     width: auto;
     position: relative;
   }
-
+  .gnbWrap{
+    top:150px;
+  }
   /*메인화면이미지*/
   .main {
     position: relative;
@@ -263,6 +267,8 @@ section.news {
     height: 100%;
   }
   section.news #newswrap .eventBox1 {
+    width: 90%;
+    margin:0 auto;
     display: block;
     padding: 0;
     display: flex;
